shalinee | prod | fixed intercom  overlap issue

--- a/apps/web-giddh/src/assets/css/style-1.scss
+++ b/apps/web-giddh/src/assets/css/style-1.scss
@@ -3213,7 +3213,7 @@ ul.pills li {
     border-radius: 2px;
     position: relative;
     padding: 6px 14px;
-    z-index: 2;
+    z-index: 100;
     -webkit-box-shadow: 0px 3px 28px 0 rgba(0, 0, 0, 0.14);
     -moz-box-shadow: 0px 3px 28px 0 rgba(0, 0, 0, 0.14);
     box-shadow: 0px 3px 28px 0 rgba(0, 0, 0, 0.14);
