--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -9451,7 +9451,7 @@ span#HW_badge_cont:nth-child(3) {
     }
 }
 #rcw-p91-widget-button{
-    z-index: 99;
+    z-index: 98;
 }
 .toast {
     text-align: left !important;
